test/Hello.g4
// Define a grammar called Hello
grammar Hello;
prog : hi* EOF ;
hi : 'hello' ID ;         // match keyword hello followed by an identifier
ID : [a-z]+ ;             // match lower-case identifiers
WS : [ \t\r\n]+ -> skip ; // skip spaces, tabs, newlines
